Added styling changes, added  changes to support normalized data

--- a/src/app/components/cancertypes/cancertype.component.html
+++ b/src/app/components/cancertypes/cancertype.component.html
@@ -1,5 +1,6 @@
 <ul class="breadcrumb b-c-container">
-  <p-breadcrumb class="bread-crumb-container" [model]="crumbs" ></p-breadcrumb>
+<!--  @TODO need to put bread crumbs here-->
+<!--  <p-breadcrumb class="bread-crumb-container" [model]="crumbs" ></p-breadcrumb>-->
   <button class="btn btn-primary pull-right bread-crumb-button" (click)="showAddSubCancerType()">Add {{cancerTree.getNextItemName()}}</button>
 </ul>
 
@@ -119,6 +120,7 @@
                           (cancel)="showLinkRegimen(false)"
                           (onHide)="showLinkRegimen(false)"
                           class="modal fade"></link-caner-regimen-modal>
-<p-progressBar mode="indeterminate" *ngIf="isLoading"></p-progressBar>
+<!--@TODO need to put progress bar here-->
+<!--<p-progressBar mode="indeterminate" *ngIf="isLoading"></p-progressBar>-->
 
 
